Minor spacing fixes for search bars and add button bar styles for non saving button bars

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -23,3 +23,15 @@
   top: 1px;
   position: relative;
 }
+
+.button-bar.button-bar--top {
+    text-align: right;
+    float: right;
+    margin: 0 0 20px 10px;
+}
+
+.button-bar {
+    float: none;
+    clear: both;
+    margin: 30px 0;
+}
