--- a/src/components/searchbar/_searchbar.scss
+++ b/src/components/searchbar/_searchbar.scss
@@ -57,7 +57,6 @@
   @include media(tablet) {
     float: right;
     max-width: 250px;
-    width: 50%;
     margin: 0 auto;
   }
 
@@ -75,6 +74,10 @@
     background-position: 0 50%;
     border-left: 1px solid $black;
     width: 34px;
+  }
+
+  .form-group {
+    margin-bottom: 0;
   }
 
 }
